--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  color: blue;
+  color: #339966;
   text-align: center;
   font-family: sans-serif;
 }
@@ -14,6 +14,13 @@ h1 {
     margin: 10px;
   }
   .heading {
-    color: red;
+    color: #4d0026;
     font-size: 24px;
+  }
+  .int {
+    Color:#339966;
+    font-size: 20px;
+    font-family: verdana;
+    font-style: italic;
+    font-weight: bold;
   }
